# cmake-openmp

./: CMakeLists.txt  README.md  testOpenMP.cpp
.github/workflows/: cmake.yml
